--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,10 @@ dependencies {
 	compile 'io.jsonwebtoken:jjwt:0.9.1'
 
 	compile group: 'com.github.ulisesbocchio', name: 'jasypt-spring-boot-starter', version: '3.0.3'
-	
+
+	compile("org.springframework.ldap:spring-ldap-core")
+	compile("org.springframework.security:spring-security-ldap")
+	compile("com.unboundid:unboundid-ldapsdk")
 
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
