--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,19 @@ jasypt.encryptor.password=aWRhc2hib2FyZFNlY3VyaXR5S2V5
 jasypt.encryptor.bean=JasyptEncryptorBean
 #Spring Doc (Open API) /Swagger-ui
 springdoc.swagger-ui.doc-expansion: none
+
+####### Logging ###########
+logging.file= auth.log
+
+####### LDAP ##############
+ldap.enabled = true
+ldap.url= ldap://10.242.175.105:389/
+ldap.base.dn= OU=Cognizant,DC=cts,DC=com
+ldap.user.dn.pattern = uid={0}
+ldap.user.principal = cts\\xxxxxx
+ldap.user.password = xxxxxxxx
+ldap.user.mailAttribute = mail
+ldap.user.firstNameAttribute=cn
+ldap.user.lastNameAttribute=
+ldap.user.orgAttribute=company
+ldap.user.securityAuthentication=simple
