--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ ldap.url= ldap://10.242.175.105:389/
 ldap.base.dn= OU=Cognizant,DC=cts,DC=com
 ldap.user.dn.pattern = uid={0}
 ldap.user.principal = cts\\xxxxxx
-ldap.user.password = xxxxxxxx
+ldap.user.password = ENC(xxxxxxxx)
 ldap.user.mailAttribute = mail
 ldap.user.firstNameAttribute=cn
 ldap.user.lastNameAttribute=
