sast issue fixes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,6 @@ spring.data.mongodb.credents=ENC(4litQ6Gs+nMxT88Dxa5hy8/peZ3m46Va/aeFy2vHw/PFqoB
 spring.data.mongodb.uri=mongodb://idashboard:${spring.data.mongodb.credents}@10.120.100.151:27019/acceleratordb
 jasypt.encryptor.password=dndCMiFLdGR5dktqJnY0dQ==
 jasypt.encryptor.bean=JasyptEncryptorBean
-#jasypt.encryptor.algorithm=PBEWITHHMACSHA512ANDAES_256
+jasypt.encryptor.algorithm=PBEWITHHMACSHA512ANDAES_256
 #Spring Doc (Open API) /Swagger-ui
 springdoc.swagger-ui.doc-expansion: none
