--- a/build.gradle
+++ b/build.gradle
@@ -16,9 +16,10 @@
  */
 
 plugins {
-	id 'org.springframework.boot' version '2.2.6.RELEASE'
-	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+	id 'org.springframework.boot' version '2.7.18'
+	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 	id 'java'
+	id "org.sonarqube" version "3.3"
 }
 
 group = 'com.cognizant'
@@ -31,6 +32,11 @@ configurations {
 	}
 }
 
+sonarqube {
+	properties {
+		property "sonar.qualitygate.wait", true
+	}
+}
 
 repositories {
 	mavenLocal()
@@ -43,18 +49,23 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-	compile 'org.springdoc:springdoc-openapi-ui:1.3.0'
-	compile 'org.springdoc:springdoc-openapi-data-rest:1.3.0'
-	compile 'org.springdoc:springdoc-openapi-security:1.3.0'
+	implementation 'com.fasterxml.jackson.core:jackson-core:2.15.3'
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.3'
+	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.3'
+	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
+	implementation 'org.springdoc:springdoc-openapi-data-rest:1.7.0'
+	implementation 'org.springdoc:springdoc-openapi-security:1.7.0'
 
-	compile 'com.google.api-client:google-api-client:1.30.2'
-	compile 'io.jsonwebtoken:jjwt:0.9.1'
+	implementation 'com.google.api-client:google-api-client:2.2.0'
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	implementation 'org.yaml:snakeyaml:2.0'
+	implementation 'com.google.guava:guava:32.0.1-jre'
 
-	compile group: 'com.github.ulisesbocchio', name: 'jasypt-spring-boot-starter', version: '3.0.3'
+	implementation group: 'com.github.ulisesbocchio', name: 'jasypt-spring-boot-starter', version: '3.0.5'
 
-	compile("org.springframework.ldap:spring-ldap-core")
-	compile("org.springframework.security:spring-security-ldap")
-	compile("com.unboundid:unboundid-ldapsdk")
+	implementation "org.springframework.ldap:spring-ldap-core"
+	implementation "org.springframework.security:spring-security-ldap"
+	implementation "com.unboundid:unboundid-ldapsdk"
 
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
